# grpc-kv-examples

./: .dockerignore  .gitignore  CLAUDE.md  COMPARISON-GUIDE.md  COMPATIBILITY-MATRIX.md  DEBUGGING.md  Dockerfile  HANDOFF.md  NODEJS-TEST-RESULTS.md  OPTION-2-RESULTS.md  P521-IMPROVEMENTS.md  README.md  RUST-INTEGRATION.md  SESSION-HANDOFF-2025-11-07-PART2.md  SESSION-HANDOFF-2025-11-07-PART3.md  SESSION-HANDOFF-2025-11-07.md  buf.gen.yaml  build-patched-grpc.sh  build.sh  compare-grpc-versions.sh  compatibility-results.txt  env.sh  full-compatibility-test.sh  gen-certs.sh  go-server.txt  main.py  py-server.txt  pyproject.toml  python-server-pygo-clients.txt  python.env.sh  rb-server.txt  requirements.txt  simple-go-server.go  simple-py-client.py  simple-py-server.py  simple-rb-client.rb  simple-rb-server.rb  test-all-curves.sh  test-compatibility.sh  test-cross-language.sh  (+6 more)
.claude/: settings.local.json
.github/workflows/: prove-grpc-fix.yml
certs/: ec-mtls-client.cnf  ec-mtls-client.crt  ec-mtls-client.key  ec-mtls-server.cnf  ec-mtls-server.crt  ec-mtls-server.key  ec-secp256r1-mtls-client.cnf  ec-secp256r1-mtls-client.crt  ec-secp256r1-mtls-client.key  ec-secp256r1-mtls-server.cnf  ec-secp256r1-mtls-server.crt  ec-secp256r1-mtls-server.key  ec-secp384r1-mtls-client.cnf  ec-secp384r1-mtls-client.crt  ec-secp384r1-mtls-client.key  ec-secp384r1-mtls-server.cnf  ec-secp384r1-mtls-server.crt  ec-secp384r1-mtls-server.key  ec-secp521r1-mtls-client.cnf  ec-secp521r1-mtls-client.crt  ec-secp521r1-mtls-client.key  ec-secp521r1-mtls-server.cnf  ec-secp521r1-mtls-server.crt  ec-secp521r1-mtls-server.key  mtls-client.key  mtls-client.pem  mtls-server.key  mtls-server.pem  rsa-2048-mtls-client.cnf  rsa-2048-mtls-client.crt  rsa-2048-mtls-client.key  rsa-2048-mtls-server.cnf  rsa-2048-mtls-server.crt  rsa-2048-mtls-server.key  rsa-mtls-client.cnf  rsa-mtls-client.crt  rsa-mtls-client.key  rsa-mtls-server.cnf  rsa-mtls-server.crt  rsa-mtls-server.key
cpp/: .gitignore  CMakeLists.txt  build.sh
cpp/src/: client.cpp  server.cpp
csharp/: CSharpGrpcClient.csproj  CSharpGrpcServer.csproj  CertificateHelper.cs  GrpcClientHelper.cs  KVServiceImpl.cs  Program.cs  ServerProgram.cs
dart/: pubspec.yaml
dart/.dart_tool/: package_config.json  package_graph.json
docs/: 20250208-0949-grpc-debugging.md  20250208-1030-grpc-debugging.md  certificate-secp521r1-info.md  example-tf-client-cert-macos-15-2.txt  example-tf-server-cert-macos-15-2.txt  gemini-csharp-implementation-2025-01-24-1757.md  grpc-channel-arguments.md  grpc-channel-arguments.txt  notes.md  ossl-client-go-server.md  ossl-client-py-server.md  ossl-client-rb-server.md  tips.md
go/: build.sh  go-kv-client.go  go-kv-server.go  go.mod  simple-go-client.go  simple-go-server.go
go/proto/: kv_pb2.py  kv_services_pb.rb
java/: build.gradle  settings.gradle
java/src/main/java/io/grpc/kv/: KVClient.java  KVServer.java
kotlin/: .gitignore  build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/io/grpc/kv/: KVClient.kt  KVServer.kt
nodejs/: kv-client.js  kv-server.js  node-kv-client.js  node-kv-server.js  package-lock.json  package.json
objc/: KVClient.m  KVServer.m  Kv.pbobjc.h  Kv.pbobjc.m  Kv.pbrpc.h  Kv.pbrpc.m  Podfile  README.md
patches/: grpc-ec-curves-p384-p521.patch
php/: README.md  composer.json  generate-proto.sh  kv-client.php  kv-server.php  php-kv-client.php  php-kv-server.php  simple-php-client.php
php/GPBMetadata/Proto/: Kv.php
php/Proto/: GetRequest.php  GetResponse.php  PBEmpty.php  PutRequest.php
php/proto/GPBMetadata/: Kv.php
php/proto/Proto/: GetRequest.php  GetResponse.php  KVClient.php  PBEmpty.php  PutRequest.php
php/src/KV/: EmptyMessage.php  GetRequest.php  GetResponse.php  KVClient.php  PutRequest.php
proto/: celersql.proto  celersql_pb2.py  celersql_pb2_grpc.py  kv.pb.go  kv.proto  kv_pb.rb  kv_pb2_grpc.py  kv_services_pb.rb  sqlite.proto  sqlite_pb2.py  sqlite_pb2_grpc.py
python/: 384-py-srv.txt  521-a-gosrv-pycli.pg  521-pycli.ot  celersql.db  certificate_helper.py  database.db  example-py-client.py  example-py-server.py  logging_helper.py  py-kv-server.py  simple-py-client.py  simple-py-server.py  sqlite-py-client.py  sqlite-py-server.py
python/client/: sqlite_client.py
python/proto/: celersql_pb2_grpc.py  database.py  kv_pb2.py  kv_pb2_grpc.py  sqlite_pb2.py  sqlite_pb2_grpc.py
python/server/: sqlite_server.py
python/utils/: __init__.py  certificate_helper.py  database.py  logging_helper.py
ruby/: Gemfile  rb-kv-client.rb  rb-kv-server.rb  simple-rb-client.rb  simple-rb-server.rb
ruby/proto/: kv_pb.rb  kv_services_pb.rb
rust/: Cargo.toml  build.rs
rust/src/: cert_verifier.rs  client.rs  lenient_verifier.rs  lib.rs  server.rs
scala/: build.sbt
scala/src/main/scala/kv/: KVClient.scala  KVGrpc.scala  KVServer.scala  Kv.scala
swift/: .gitignore  Package.swift  generate-protos.sh
swift/Sources/KVClient/: kv.grpc.swift  main.swift
swift/Sources/KVServer/: kv.grpc.swift  kv.pb.swift  main.swift
tests/: socket-certs.py
tools/: check-certs.sh  gen-certs.sh  tls-check.py
utils/: capture-grpc-versions.sh  generate-comparison-report.sh  grpc-environment-manager.sh
