[package]
name = "grpc-kv-rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-kv-server"
path = "src/server.rs"

[[bin]]
name = "rust-kv-client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.12", features = ["tls", "channel"] }
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws-lc-rs", "ring", "std"] }
rustls-platform-verifier = "0.4"
webpki-roots = "0.26"
rustls-pemfile = "2.2"
rustls-pki-types = "1.10"
rustls-webpki = "0.103"
http = "1.0"
hyper = "1.7"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
hyper-rustls = { version = "0.27", features = ["http2", "ring"] }
tower = "0.4"
env_logger = "0.11"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
